--- a/login.html
+++ b/login.html
@@ -106,7 +106,7 @@
         formData.append('username', username);
         formData.append('password', password);
         formData.append('card', card);
-        fetch('http://game.tisoz.com/api/login', {
+        fetch('https://game.tisoz.com/api/login', {
             method: 'POST',
             body: formData
         })
